/*
 * $Id: ChangeLog,v 1.617 2003/01/12 08:28:13 ronpinkas Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2003-01-12 10:00 UTC-0200 Luiz Rafael Culik <culikr@uol.com.br>
  * include/hbapifs.h
  * include/hbset.h
  * include/set.ch
  * source/pp/pptable.c
  * source/rtl/file.c
  * source/rtl/filesys.c
  * source/rtl/set.c
    ! Implement SET FILECASE, DIRCASE and DIRSEPARATOR
      This Changes are Borrow from Harbour (author Gustavo Junior Alves <alves@coslinux.com.br>)

2003-01-12 00:26 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/rtl/getsys.prg
    ! Fixed GetActive() to be more Clipper compatible.

  * source/vm/hvm.c
    ! Fixed hb_vmArrayPop() to allow hb_vmArrayPush() optimzation of aTail( NIL ) to return NIL, like Clipper.

2003-01-12 02:30 UTC-0300 Horacio Roldan <harbour_ar@yahoo.com.ar>
  * source/rdd/dbfcdx/dbfcdx1.c
    + ordKeyAdd/Del, now accepts optional value to be used as the key
    ! added cast for MSVC

2003-01-11 10:52 UTC-0300 Horacio Roldan <harbour_ar@yahoo.com.ar>
  * source/pp/pptable.c
    ! fixed while support for rddads
  * include/hbrddcdx.h
  * source/rdd/dbfcdx/dbfcdx2.h
  * source/rdd/dbfcdx/dbfcdx1.c
    ! fixed internal counter that may produce a GPF
    + added support for Unique indexes
    + added support for Custom Indexes
    * work in progress: support for temporary indexes
    + added functions hb_cdxFindBag, hb_cdxEvalKey

2003-01-11 19:00 UTC-0300 Luiz Rafael Culik <culikr@uol.com.br>
  * utils/hbmake/hbmake.prg
    ! Added MT support for hbmake Edit mode

2003-01-11 12:53 UTC+0100 Patrick Mast <patrick@winfakt.com>
  * makefile.bc
    ! Added support for a user defined ARFLAGS
      * if you use -v -y in your CFLAGS, you HAVE to set ARFLAGS to /P64
        to be able to make the MT lib files.

2003-01-11 03:15 UTC+0100 Francesco Saverio Giudice <info@fsgiudice.com>